--- a/index.html
+++ b/index.html
@@ -48,43 +48,38 @@
                 </header>
                 <a href="#About" id="scroll"><img src="/scroll-down-icon-png-6.png" alt="scroll" id="scrollPic"></a>
                 <div class="container">
-                    <div id="About" class="MainThings" data-aos="fade-up">
+                    <div id="About" class="MainThings">
                         <h1>About Me</h1>
                         <p>< I am a 14 year old Belgian Web Developer. I started learning Web Development when I was around 12 years old.></p>
                     </div>
                     <div id="WIM" class="MainThings" data-aos="fade-left">
-                        <!--<h2>What I Made</h2>
+                        <h2>What I Made</h2>
                         <div class="grid">
                             <div id="project1" class="projects gridElement">
                                 <a href="http://admin.creatief.be/emile" target="_blank">
-                                    <img src="/pcScreenFrans.png" alt="WebsiteFrans" name="WebsiteFrans">
+                                    <img src="/pcScreenFrans.png" alt="WebsiteFrans" name="WebsiteFrans" class="pictures">
                                 </a>
-                                <br><label for="WebsiteFrans">This is a website that i made for my teacher French.</label>
                             </div>
                             <div id="project2" class="projects gridElement">
                                 <a href="http://www.sevenks.be" target="_blank">
-                                    <img src="/sevenksPhone.png" alt="Sevenks" name="sevenks">
+                                    <img src="/sevenksPhone.png" alt="Sevenks" name="sevenks" class="pictures">
                                 </a>
-                                <br><label for="sevenks">This is a website that i made for my aunt her business.</label>
                             </div>
-                        </div>-->
-                        <h1>What i made</h1>
+                        </div>
+                        <!--<h1>What i made</h1>
                         <p>Once I had to make a website for my teacher French. This was my first actual website that I had to make for somebody and also the first website that would go live. I had to make a website for the pupils to make exercises on.</p>
                         <p>I have the link here: <a href="http://admin.creatief.be/emile">admin.creatief.be/emile</a></p>
                         <p><br> I just recently finished a website I made for my aunt. This was a pretty easy website to make because it was very basic.</p>
-                        <p>Link: <a href="http://www.sevenks.be">www.sevenks.be</a></p>
+                        <p>Link: <a href="http://www.sevenks.be">www.sevenks.be</a></p>-->
                     </div>
                     <div id="Info" class="MainThings" data-aos="fade-right">
                         <h1>FAQ</h1>
-                        <ul style="padding: 0; margin: 0;">
-                            <li><h3>How fast am I able to make a website?</h3></li>
+                            <h3>How fast am I able to make a website?</h3></li>
                             <p>That depends... I made this website in 1 day but sometimes I still add some things if i learned something new. If I made a website for you then I will try to keep your website up-to-date and I will try to implement new things. It might not be immediatly but I will get to your website.</p>
-                            <li><h3>Why me?</h3></li>
+                            <h3>Why me?</h3></li>
                             <p>I have around 2 years of experience and I will always try to learn new things so I can implement them in your website. I can also make you a little preview of what the website might look like for free and I will give you the source code.</p>
-                            <li><h3>What type of websites am I able to make?</h3></li>
+                            <h3>What type of websites am I able to make?</h3></li>
                             <p>I can make a variety of websites. I can make minimalistic designs just like this one, or i could make something more living.</p>
-
-                        </ul>
                     </div>
                     <div id="Contact" class="MainThings" data-aos="fade-down">
                         <h1>Get in touch with me!</h1>
