--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/code-512.png">
         <!--<script src="https://www.w3counter.com/tracker.js?id=131911"></script>-->
         <meta name="description" content="This is Emile Deloof's Portfolio where you can find info about me and what i do.">
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <meta name="google-signin-client_id" content="257046177015-g7agjlvdef7dejrsm6j8i0ivfig3t771.apps.googleusercontent.com">
     </head>
     <body>
         <div id="HeaderWrapper">
@@ -21,6 +23,8 @@
                         <li><a href="#WIM">Projects</a></li>
                         <li><a href="#Info">FAQ</a></li>
                         <li><a href="#Contact">Contact</a></li>
+                        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                        <a href="#" onclick="signOut();" id="signOut">Sign out</a>
                     </ul>
                 </nav>
             </header>
@@ -121,6 +125,24 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
+        </script>
+        <script>
+            function onSignIn(googleUser) {
+                var profile = googleUser.getBasicProfile();
+                var signOut = document.getElementById("signOut")
+                console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+                console.log('Name: ' + profile.getName());
+                console.log('Image URL: ' + profile.getImageUrl());
+                console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+                signOut.style.display = "block";
+            }
+                function signOut(signOut) {
+                    var auth2 = gapi.auth2.getAuthInstance();
+                    auth2.signOut().then(function () {
+                    console.log('User signed out.');
+                    });
+                    signOut.style.display = "none";
+                }
         </script>
     </body>
 </html>
