--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <li><a href="#WIM">Projects</a></li>
                         <li><a href="#Info">FAQ</a></li>
                         <li><a href="#Contact">Contact</a></li>
-                        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-                        <a href="#" onclick="signOut();" id="signOut">Sign out</a>
+                        <!--<div class="g-signin2" data-onsuccess="onSignIn"></div>
+                        <a href="#" onclick="signOut();" id="signOut">Sign out</a>-->
                     </ul>
                 </nav>
             </header>
